reservation multy resv

--- a/gedang/client/assets/css/main.css
+++ b/gedang/client/assets/css/main.css
@@ -508,4 +508,43 @@ footer a:hover, footer a:focus{
 		padding-left: 15px;
 	}
 }
+ .chk{
+ 	-webkit-appearance:none;
+ 	background-color: #b9bbbd;
 
+ 	box-shadow: 0 1px 2px rgba(0,0,0,0.5). inset 0px -15px 10px -12px rgba(0,0,0,0.5);
+ 	padding: 9px;
+ 	border-radius: 3px;
+ 	display: inline-block;
+ 	position: relative;;
+ 	height: 	20px;
+ 	width: 	20px;
+ }
+
+ .chk:active, .chk:checked:active {
+ 	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+ }
+
+ .chk:checked{
+ 	background-color: green;
+ 	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+ 	color: #99a1a7;
+ }
+
+input[type=checkbox]:disabled{
+	background-color: red;
+}
+
+.bank{
+	border: 1px solid #969595;
+	height: 80px;
+	width: 120px;
+	border-radius: 10px;
+	background-color: transparent;
+}
+
+.bank:focus{
+	border-radius: 10px;
+	border: 2px solid #969595;
+	outline: none;
+}
